--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -20,7 +20,7 @@
                 </a>
                 <div class="dropdown-menu bg-dark" aria-labelledby="interview-dropdown">
                     <a class="nav-link bg-dark drop" th:href="@{|/interview-questions/show|}">Interview Home</a>
-                    <button class="btn nav-create-button" id="nav-interview-questions-create" data-toggle="modal"
+                    <button class="btn nav-create-button bg-dark drop" id="nav-interview-questions-create" data-toggle="modal"
                             data-target="#interview-questions-create-modal">Create
                     </button>
                     <a class="nav-link bg-dark drop" th:href="@{|/api/interview-questions|}">Practice</a>
@@ -77,7 +77,7 @@
                     Mentorship
                 </a>
                 <div class="dropdown-menu bg-dark" aria-labelledby="interview-dropdown">
-                    <button class="btn nav-create-button" id="nav-mentorship-posts-create" data-toggle="modal"
+                    <button class="btn nav-create-button bg-dark drop" id="nav-mentorship-posts-create" data-toggle="modal"
                             data-target="#mentorship-posts-create-modal">Create
                     </button>
                 </div>
@@ -133,7 +133,7 @@
                     Jobs
                 </a>
                 <div class="dropdown-menu bg-dark" aria-labelledby="interview-dropdown">
-                    <button class="btn nav-create-button" id="nav-job-postings-create" data-toggle="modal"
+                    <button class="btn nav-create-button bg-dark drop" id="nav-job-postings-create" data-toggle="modal"
                             data-target="#job-postings-create-modal">Create
                     </button>
                 </div>
@@ -190,7 +190,7 @@
                 </a>
                 <div class="dropdown-menu bg-dark" aria-labelledby="whiteboard-dropdown">
                     <a class="nav-link bg-dark drop" th:href="@{|/whiteboard-questions/show|}">Whiteboard Home</a>
-                    <button class="btn nav-create-button" id="nav-whiteboard-questions-create" data-toggle="modal"
+                    <button class="btn nav-create-button bg-dark drop" id="nav-whiteboard-questions-create" data-toggle="modal"
                             data-target="#whiteboard-questions-create-modal">Create
                     </button>
                     <a class="nav-link bg-dark drop" th:href="@{|/whiteboard/1|}">Environment 1</a>
