--- a/src/main/resources/templates/whiteboard-questions/show.html
+++ b/src/main/resources/templates/whiteboard-questions/show.html
@@ -5,45 +5,110 @@
     <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
     <meta class="filestackKey" th:content="${filestackKey}"/>
 </head>
-<body>
+<body class="back">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 <div th:replace="fragments/create-modals.html :: create-modals"></div>
-<div th:each="post : ${postList}">
-    <h1 th:text = "${post.title}"></h1>
-    <p th:text = "${post.body}"></p>
-    <p th:text = "${post.answer}"></p>
-    <p th:text = "${post.user.email}"></p>
 
-<!-- Will working on ratings -->
-    <div sec:authorize = "isAuthenticated()">
-        <button class="upvote-button" th:id="'upvote-' + ${post.id}">Upvote JS</button>
-        <button class="downvote-button" th:id="'downvote-' + ${post.id}">Downvote JS</button>
-    </div>
-    <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
-<!-- END Will working on ratings -->
 
-    <div th:each="comment : ${post.commentList}">
-        <p th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
-        <div sec:authorize = "isAuthenticated()">
-            <div th:if="${user.id == comment.user.id}">
-                <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
-                <button class="edit-comment-button" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
-            </div>
-            <button class="upvote-comment-button" th:id="'upvote-comment-' + ${comment.id}">Upvote JS</button>
-            <button class="downvote-comment-button" th:id="'downvote-comment-' + ${comment.id}">Downvote JS</button>
+<div class="container profile-container">
+<div class="card p-5 mt-5 blue-font" id="profile-card">
+    <h2 class="display-1 card-title text-center p-3 profile-header">Whiteboard</h2>
+    <div class="row">
+        <div class="col-4 text-center">
+            <a class ="profile-header" id="interview-whiteboard-button" th:href="@{|/whiteboard|}">Whiteboard</a>
+            <!--                <a th:href="@{|/interview-questions/create|}"><button class="btn btn-primary">Interview Create</button></a>-->
         </div>
-        <p>Comment Rating Total: <span th:text = "${comment.getRatingTotal()}"></span></p>
+        <div class="col-4">
+            <div class="d-flex justify-content-sm-around dropdown btn ml-5" id="sortbutton">
+                <a class="dropdown-toggle profile-header" href="#" id="sort-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Sort By
+                </a>
+                <div class="dropdown-menu bg-dark" aria-labelledby="whiteboard-dropdown">
+                    <a class="drop" th:href="@{/interview-questions/show(by=titleAsc)}">Title Ascending</a>
+                    <a class="drop" th:href="@{/interview-questions/show(by=titleDesc)}">Title Descending</a>
+                    <a class="drop" th:href="@{/interview-questions/show(by=newest)}">Most Recent</a>
+                    <a class="drop" th:href="@{/interview-questions/show(by=oldest)}">Oldest</a>
+                    <a class="drop" th:href="@{/interview-questions/show}">Highest Rating</a>
+                    <a class="drop" th:href="@{/interview-questions/show(by=lowestRating)}">Lowest Rating</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-4 text-center">
+            <a class ="profile-header" id="interview-question-round-button" th:href="@{|/api/interview-questions|}">Question Round</a>
+            <!--                <a th:href="@{|/job-postings/create|}"><button class="btn btn-primary">Job Postings Create</button></a>-->
+        </div>
     </div>
 
-    <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-    <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
-    <div sec:authorize = "isAuthenticated()">
-        <div th:if="${user.id == post.user.id}">
-            <a th:href="@{|/whiteboard-questions/edit/${post.id}|}"><button>Edit Post</button></a>
-            <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
+</div>
+</div>
+
+<div class="container post-container">
+    <!--    POST FILLING BEGINS HERE-->
+    <div th:each="post : ${postList}">
+        <div class="card mb-2">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-1">
+                        <i class="upvote-button fas fa-arrow-up btn btn-link" th:id="'upvote-' + ${post.id}"></i>
+                        <p class="mb-0 ml-3"><span th:text="${post.getRatingTotal()}"></span></p>
+                        <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
+                    </div>
+                    <div class="col-11">
+                        <div th:id="'post-' + ${post.id}"></div>
+                        <p class="m-r mb-0 userprint">Posted on:<span class="userinfo" th:text="${post.dateTime} + 'by' + ${post.user.username}"></span></p>
+                        <h1 th:text="${post.title}"></h1>
+                        <p th:text="${post.body}"></p>
+                        <p th:text="${post.answer}"></p>
+                        <div th:each="comment : ${post.commentList}">
+                            <div class="row">
+                                <!--                                    THis is where the comment ratings are -->
+                                <div class="col-1">
+                                    <i class="upvote-comment-button fas fa-arrow-up btn btn-link"
+                                       th:id="'upvote-comment-' + ${comment.id}"> </i>
+                                    <p class="mb-0 ml-3"><span th:text="${comment.getRatingTotal()}"></span></p>
+                                    <i class="downvote-comment-button fas fa-arrow-down btn btn-link"
+                                       th:id="'downvote-comment-' + ${comment.id}"></i>
+                                </div>
+                                <!--                                    This is where the comment body goes-->
+                                <div class="col-11 align-self-center p- commentrow">
+                                    <div class="media">
+                                        <img th:src="${comment.user.profileImageURL}" alt="profile"
+                                             class="mr-3 rounded-circle" style="width:60px;">
+                                        <div class="media-body">
+                                            <p class="m-r mb-0 userprint">Posted on: <span class="userinfo"
+                                                                                           th:text="${comment.dateTime}"></span>
+                                                by <span class="userinfo" th:text="${comment.user.username}"></span></p>
+                                            <p class="mb-0" th:text="${comment.body}"
+                                               th:id="'comment-body-' + ${comment.id}"></p>
+                                            <div th:if="${user.id == comment.user.id}">
+                                                <div class="edit-comment-div"
+                                                     th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
+                        <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">
+                            Comment
+                        </button>
+                        <div th:if="${user.id == post.user.id}">
+                            <a th:href="@{|/interview-questions/edit/${post.id}|}">
+                                <button>Edit Post</button>
+                            </a>
+                            <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+<!--<a th:href="@{|/whiteboard-questions/edit/${post.id}|}"><button>Edit Post</button></a>-->
 <div th:replace="fragments/chat-box.html :: chat-box"></div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
 <div th:replace="fragments/chat-scripts.html :: chat-scripts"></div>
