--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <div class="container h-100 ">
         <div class="d-flex h-100 text-center align-items-center ">
             <div class="w-100 ">
-                <h1 class="display-1" id ="logo">CodeOn</h1>
+                <h1 class="display-1 landlogo" style="color: #E3E7D3"; id="logo">CodeOn</h1>
                 <h2 class="display-5 splash">Stay connected and CodeOn.</h2>
                 <div class="d-flex justify-content-center">
                     <a id="index-login" th:href="@{|/login|}">Login</a>
