--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -27,12 +27,16 @@
         <div class="card p-5 blue-font" id="profile-card">
             <h2 class="display-1 text-center p-3 profile-header">CodeOn</h2>
         </div>
+
+        <!-- Large display buttons -->
         <div class="d-flex justify-content-around">
             <a class ="profile-button" th:href="@{|/interview-questions/show|}">Interview Questions</a>
             <a class ="profile-button" th:href="@{|/whiteboard-questions/show|}">Whiteboard</a>
             <a class ="profile-button" th:href="@{|/mentorship-posts/show|}">Mentorship</a>
             <a class ="profile-button" th:href="@{|/job-postings/show|}">Job Listings</a>
         </div>
+
+
     </div>
 </div>
 <!--    Interview-->
