--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -35,7 +35,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="whiteboard-dropdown" role="button"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Whiteboard Questions
+                    Whiteboard
                 </a>
                 <div class="dropdown-menu bg-dark" aria-labelledby="whiteboard-dropdown">
                     <a class="nav-link bg-dark drop" th:href="@{|/whiteboard-questions/show|}">Whiteboard</a>
@@ -83,7 +83,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{|/job-postings/show|}">Job Postings</a>
+                <a class="nav-link" th:href="@{|/job-postings/show|}">Jobs</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="whiteboard-dropdown" role="button"
