--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -32,6 +32,9 @@
                     <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span>    </p>
                                 <h1 th:text = "${post.title}"></h1>
                                 <p th:text = "${post.body}"></p>
+                    <div th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}">
+                        <img class="post-image" th:src="${post.imageURLList[0].url}" alt="post-image">
+                    </div>
                     <div th:each="comment : ${post.commentList}">
                         <div class="row">
                             <!--                                    THis is where the comment ratings are -->
