--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -9,13 +9,30 @@
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 <div th:replace="fragments/create-modals.html :: create-modals"></div>
 <div class="container profile-container">
-
     <!--    PROFILE CARD    -->
     <div class="card p-5 mt-5 blue-font" id="profile-card">
-        <h1 class="display-1 card-title text-center p-3 profile-header">Mentorship</h1>
-        <div class="card-text media">
-        </div>
+        <h2 class="display-1 card-title text-center p-3 profile-header">Mentorship</h2>
     </div>
+</div>
+<div class="row mt-3 mb-3">
+    <div class="col-2"></div>
+    <div class="col-8 d-flex align-content-center justify-content-around">
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" name="searchString" placeholder="Search"
+                   aria-label="Search">
+            <select class="custom-select" id="select-sort" name="by">
+                <option selected disabled value="highestRating">Sort Results By</option>
+                <option value="highestRating">Highest Rating</option>
+                <option value="lowestRating">Lowest Rating</option>
+                <option value="titleAsc">Title Ascending</option>
+                <option value="titleDesc">Title Descending</option>
+                <option value="newest">Most Recent</option>
+                <option value="oldest">Oldest</option>
+            </select>
+            <button class="btn my-2 my-sm-0 ml-2" id="search-button" type="submit">Search</button>
+        </form>
+    </div>
+    <div class="col-2"></div>
 </div>
 <div class="container">
     <div th:each="post : ${postList}">
