--- a/src/main/resources/templates/job-postings/show.html
+++ b/src/main/resources/templates/job-postings/show.html
@@ -9,7 +9,7 @@
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 <div th:replace="fragments/create-modals.html :: create-modals"></div>
 
-<div class="container profile-container">
+<div class="container-sm profile-container">
     <!--    PROFILE CARD    -->
     <div class="card p-5 mt-5 blue-font" id="profile-card">
         <h2 class="display-1 card-title text-center p-3 profile-header">Jobs</h2>
@@ -17,7 +17,7 @@
         </p>
     </div>
 </div>
-<div class="container">
+<div class="container-sm">
     <div th:each="post : ${postList}">
         <div class="card mb-2">
             <div class="card-body">
