--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -143,7 +143,7 @@ a:hover {
 
 .logo{
     font-family: 'Orbitron', sans-serif;
-    color: #00727F;
+    color: #E3E7D3;
 }
 
 .card-body{
@@ -163,7 +163,7 @@ a:hover {
 /*this is the video portion*/
 #logo{
     font-family: 'Orbitron', sans-serif;
-    color: #0f6674;
+    color: #E3E7D3;
 }
 
 
