--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -223,6 +223,7 @@
                 <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
             <div th:if="${user.id == comment.user.id}">
                 <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                <button class="edit-comment-button" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
             </div>
         </div>
         </div>
@@ -301,6 +302,7 @@
                                                 <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
                                                 <div th:if="${user.id == comment.user.id}">
                                                     <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                                    <button class="edit-comment-button" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -381,6 +383,7 @@
                                                 <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
                                                 <div th:if="${user.id == comment.user.id}">
                                                     <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                                    <button class="edit-comment-button" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
                                                 </div>
                                             </div>
                                         </div>
